fix(permissions): align names
LERGO-590

--- a/app/styles/_baseLayout.scss
+++ b/app/styles/_baseLayout.scss
@@ -83,7 +83,6 @@ $FOOTER_HEIGHT: 170px !default;
         }
 
         .header-logo, .header-navigation, .header-actions{
-            background:red;
             display:inline-block;
             vertical-align: top;
             height:$HEADER_HEIGHT;
